# MLE-assignment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Instructions.md  README.md  config.py  config.yaml  locustfile.py  predictions_test.csv  pyproject.toml  requirements.txt  trained_model.pkl
.github/: pull_request_template.md
.github/workflows/: build.yaml  ci.yaml  release.yaml
FastAPI/: main.py
data/: exercise_test.tsv  exercise_train.tsv
notebooks/: image_analysis.ipynb  prelim_analysis.ipynb
prototype/: data_schemata.py  logger.py  main.py  proc-text.py  utils.py
prototype/cli/: cli.py
prototype/db/: batch_fetch_images.py  ingestion_pipeline.py
prototype/observability/: elastic_search_logging.py  elastic_server.sh  mlflow.py
prototype/pipelines/: pipeline_factory.py  preprocessing.py  test.py  train.py
tests/: test_example.py  test_inference_endpoint.py  test_test.py  test_train.py
