[tool.poetry]
name = "prototype"
version = "0.0.1"
description = "ASOS MLE Take-home assignment"
authors = ["Achilleas Athanasiou Fragkoulis <achilleasatha@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
bumpver = "^2023.1129"
pydantic = "^2.6.0"
click = "^8.1.7"
pyyaml = "^6.0.1"
fastapi = "^0.110.0"
numpy = "^1.26.4"
pandas = "^1.0.0"
setuptools = "^69.1.1"
scikit-learn = "^1.4.0"
notebook = "^7.1.1"
matplotlib = "^3.8.3"
pillow = "^10.3.0"
pandera = "^0.18.0"
onnx = "^1.16.0"
skl2onnx = "^1.16.0"
boto3 = "^1.34.58"
mlflow = "^2.11.1"
onnxruntime = "^1.17.1"
elasticsearch = "^8.12.1"
uvicorn = "^0.27.1"
locust = "^2.24.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
run_cli = "prototype.cli.cli:run_cli"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit = true
commit_message = "bump version {old_version} -> {new_version}"
tag = true
push = true
bump_files = ["pyproject.toml"]

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"'
]
"prototype/__init__.py" = [
    '__version__ = "{pep440_version}"'
]

[tool.ruff]
line-length = 120
target-version = "py310"
